# cerebella

./: .gitignore  .npmignore  AGENTS.md  Cargo.toml  README.md  auto-update.js  cerebella_server.py  cerebella_state.py  cli.js  dashboard.html  dashboard.js  main.py  package.json  pyproject.toml  update-func.js  util.py  watcher.py
dashboard/: dashboard.css  dashboard.html  dashboard.js
