[project]
name = "cerebella"
version = "0.1.3"
description = "this is what vibe coding should feel like"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "aiohttp-cors>=0.8.1",
    "huggingface-hub>=0.33.1",
    "numpy>=2.3.1",
]

[project.scripts]
cerebella = "main:main"
